--- a/popup/EULA.css
+++ b/popup/EULA.css
@@ -1,4 +1,11 @@
 body {
     width: 400px;
     height: 200px; 
-  }
+}
+
+.graph-button {
+  background-color: red;
+  display: inline-block;
+  width: 100px;
+  height: 50px;
+}
