--- a/popup/graph/graph.css
+++ b/popup/graph/graph.css
@@ -49,6 +49,10 @@ body {
     font-size: 38px;
 }
 
+.app-name-header {
+    margin-left: 60px !important
+}
+
 .side-panel-contents {
     position: relative;
     height: 100%;
@@ -60,8 +64,9 @@ body {
     height: 90%;
     overflow: auto;
     text-align: center;
+    scrollbar-width: none;
 }
-.app-container {
+.app {
     display: inline-block;
     width: 80px;
     height: 80px;
@@ -69,14 +74,34 @@ body {
     background-color: whitesmoke;
     box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    margin: 15px;
-    transition: opacity ease 0.2s;
-    background-image: url("images/twitter.jpg");
+    transition: transform ease 0.2s;
     background-size: 80px;
 }
 
-.app-container:hover {
-    opacity: 0.8;
+.app:hover {
+    transform: scale(1.02);
+}
+
+.app-container {
+    display: inline-block;
+    margin: 5px 15px;
+    animation: load ease 1s forwards
+}
+
+@keyframes load {
+    0% {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.app-name {
+    color: gray;
+    font-weight: 400;
 }
 
 .content {
@@ -92,7 +117,7 @@ body {
 .flex-column {
     position: relative;
     flex: 1;
-    background-color: rgba(128, 128, 128, 0.3);
+    background-color: rgba(128, 128, 128, 0.2);
 
 }
 
@@ -103,11 +128,180 @@ body {
     width: 100%;
 }
 
-.bubble {
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    background-color: red;
+#back-button {
+    font-size: 30px;
+    font-weight: 500;
+    color: gray;
+    position: absolute;
     border-radius: 50px;
+    text-align: center;
     cursor: pointer;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    vertical-align: middle;
+    margin-top: 5px;
+    display: none;
+}
+
+#back-button:hover {
+    background-color: rgba(128, 128, 128, 0.205);
+}
+
+#app-information-container {
+    height: 90%;
+    overflow: auto;
+    display: none;
+    scrollbar-width: none;
+}
+
+.segment {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    border-radius: 100px;
+    border: 10px solid red;
+}
+
+#app-score-container {
+    position: relative;
+    width: 100%;
+    height: 130px;
+}
+
+#app-score-value {
+    position: absolute;
+    color: black;
+    height: 100%;
+    line-height: 100px;
+    font-size: 20px;
+    font-weight: 500;
+    left: 50%;
+    transform: translateX(-50%);
+    
+}
+
+#app-score {
+    position:absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#app-score-container-title {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    font-size: 16px;
+    color: gray;
+}
+
+
+.non-selectable {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
+.category-tile {
+    padding: 20px 20px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
+    margin: 10px;
+    transition: background-color ease 0.2s;
+    position: relative;
+    vertical-align: middle;
+    animation: load ease 1s forwards;
+}
+
+.category-tile:hover {
+    background-color: rgba(128, 128, 128, 0.1);
+}
+
+
+
+#app-category-container {
+    margin-top: 30px;
+}
+
+.category-title {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.category-summary {
+    color: gray
+}
+
+.category-content {
+    display: inline-block;
+    width: 60%;
+    position: relative;
+    height: 50px;
+}
+
+.category-image {
+    width: 50px;
+    height: 50px;
+    float: left;
+    margin-right: 10px;
+}
+
+.category-score {
+    float: right;
+}
+
+
+#graph-default-text {
+    display: inline-block;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 32px;
+    text-align: center;
+    color: gray
+}
+
+#reset-panzoom {
+    position: relative;
+    font-size: 30px;
+    font-weight: 500;
+    float: right;
+    background-color: gray;
+    border-radius: 100px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    cursor: pointer;
+    z-index: 5;
+    margin: 10px;
+    line-height: 50px;
+    color: white;
+    display: none;
+}
+
+#reset-panzoom:hover {
+    background-color: rgb(121, 121, 121);
+}
+
+.bubble {
+    cursor: default;
+}
+
+
+.node-title {
+    font-weight: 500;
+    position: absolute;
+    top: 0;
+}
+
+.tile-highlight {
+    transition: background-color ease 0.2s;
+    background-color: rgba(128, 128, 128, 0.1);
+}
+
+.node-highlight {
+    transition: filter 0.2s ease;
+    filter: brightness(0.8);
 }
