--- a/popup/styles/EULA.css
+++ b/popup/styles/EULA.css
@@ -75,6 +75,9 @@ body {
 #preferences {
   background-image: url("chrome-extension://__MSG_@@extension_id__/resources/extension-icons/user.svg");
 }
+#highlight {
+  background-image: url("chrome-extension://__MSG_@@extension_id__/resources/extension-icons/highlight.svg");
+}
 #graph {
   background-image: url("chrome-extension://__MSG_@@extension_id__/resources/EULA.png");
 }
