--- a/popup/styles/add.css
+++ b/popup/styles/add.css
@@ -8,7 +8,7 @@
     border-radius: 5px;
 }
 
-#submitPastedEulaBtn {
+button {
     padding: 10px 20px;
     font-size: 16px;
     color: #fff;
@@ -17,8 +17,18 @@
     border-radius: 5px;
 }
 
-#submitPastedEulaBtn:hover {
+button:hover {
     background-color: #0056b3;
+}
+
+#analysisName {
+    width: 30%;
+    padding: 10px;
+    margin-top: 0.2rem;
+    margin-bottom: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
 }
 
 .center-items {
