--- a/popup/styles/popup.css
+++ b/popup/styles/popup.css
@@ -47,12 +47,12 @@
     cursor: default;
 }
 
-.popup-close-button {
+.popup-corner-button {
     font-size: 30px;
     float: right;
+    position: relative;
     top: 20px;
     right: 20px;
-    position: relative;
     color: gray;
     cursor: pointer;
     width: 40px;
@@ -61,9 +61,10 @@
     text-align: center;
     vertical-align: middle;
     border-radius: 100px;
+    margin: 0 5px;
 }
 
-.popup-close-button:hover {
+.popup-corner-button:hover {
     background-color: rgb(230, 230, 230);
 }
 
@@ -83,4 +84,35 @@
     animation: loadIn ease 0.2s forwards;
     box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.3);
     cursor: pointer;
+}
+
+.popup-hide-button {
+    line-height: 30px;
+}
+
+.popup-bottom-button {
+    position: absolute;
+    bottom: 20px;
+    right: 0;
+    padding: 10px 15px;
+    color: white;
+    cursor: pointer;
+    margin: 0 15px;
+    border-radius: 10px;
+    font-size: 14px;
+    box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.123);
+    transition: filter 0.2s ease;
+}
+
+.dont-show-button {
+    background-color: #FF033E;
+    right: 120px;
+}
+
+.add-button {
+    background-color: mediumspringgreen;
+}
+
+.popup-bottom-button:hover {
+    filter: brightness(0.9)
 }
