--- a/popup/styles/popup.css
+++ b/popup/styles/popup.css
@@ -1,11 +1,10 @@
 .popup-container {
-    background-color: rgba(245, 245, 245, 0.6);
-    backdrop-filter: blur(10px);
+    background-color: whitesmoke;
     width: 600px;
-    height: 400px;
+    height: 510px;
     position: fixed;
-    right: 120px;
-    top: 0;
+    right: 20px;
+    top: 20px;
     z-index: 9999;
     border-radius: 10px;
     box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.3);
@@ -52,7 +51,7 @@
     float: right;
     position: relative;
     top: 20px;
-    right: 20px;
+    right: 10px;
     color: gray;
     cursor: pointer;
     width: 40px;
@@ -61,16 +60,14 @@
     text-align: center;
     vertical-align: middle;
     border-radius: 100px;
-    margin: 0 5px;
 }
 
 .popup-corner-button:hover {
-    background-color: rgb(230, 230, 230);
+    filter: brightness(0.8)
 }
 
 #reshow-popup-button {
-    background-color: rgba(245, 245, 245, 0.6);
-    backdrop-filter: blur(10px);
+    background-color: whitesmoke;
     position: fixed;
     top: 10px;
     right: 10px;
@@ -115,4 +112,66 @@
 
 .popup-bottom-button:hover {
     filter: brightness(0.9)
+}
+
+.popup-arcs-container {
+    margin-top: 30px;
+    overflow: auto;
+    scrollbar-width: none;
+    display: flex;
+}
+
+.popup-site-icon {
+    width: 80px;
+    height: 80px;
+    padding: 5px;
+    box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.192);
+}
+
+.popup-info-container {
+    text-align: center;
+    position: relative;
+    padding-bottom: 10px;
+}
+
+.popup-site-background {
+    position: absolute;
+    bottom:0;
+    width: 100%;
+    height: 50%;
+    background-color: rgb(230, 230, 230);
+    z-index: -1;
+}
+
+.popup-site-name {
+    color: gray;
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+.popup-categories-container {
+    display: inline-grid;
+    grid-template-columns: auto auto auto auto auto auto auto auto;
+}
+
+.popup-main-score-arc-container {
+    display: inline-block;
+    margin: 0 40px;
+    position: relative;
+}
+
+.popup-category-container {
+    width: 100px;
+    height: 100px;
+}
+
+.popup-main-score-value {
+    display: inline-block;
+    position: absolute;
+    line-height: 180px;
+    vertical-align: middle;
+    left: 50%;
+    transform: translateX(-50%);
+    color: gray;
+    font-size: 30px;
 }
