--- a/popup/styles/hidden.css
+++ b/popup/styles/hidden.css
@@ -82,6 +82,8 @@ li {
 }
 
 .app {
+  position: relative;
+  display: inline-block;
   background-color: whitesmoke;
   width: 80px;
   height: 80px;
@@ -93,11 +95,9 @@ li {
   background-position: center;
   background-size: 80px;
   background-repeat: no-repeat;
+  color: white
 }
 
-.app:hover {
-  filter: brightness(0.8)
-}
 
 .app-container {
   display: inline-block;
@@ -107,4 +107,29 @@ li {
 .app-name {
   color: gray;
   margin-top: 5px;
+}
+
+
+.default-icon {
+  font-size: 40px;
+  line-height: 80px;
+  vertical-align: middle;
+
+}
+
+.app-delete {
+  position: absolute;
+  font-size: 72px;
+  line-height: 80px;
+  width: 80px;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  opacity: 0;
+  mix-blend-mode: normal;
+  color: black;
+}
+
+.app-delete:hover {
+  opacity: 1;
 }
